elasticsearch/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: es
  labels:
    app: elasticsearch
    component: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
      component: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
        component: elasticsearch
    spec:
      serviceAccount: elasticsearch
      containers:
      - name: es
        securityContext:
          capabilities:
            add:
              - IPC_LOCK
        image: quay.io/pires/docker-elasticsearch-kubernetes:6.4.2
        ports:
        - containerPort: 9200
          name: http
          protocol: TCP
        - containerPort: 9300
          name: transport
          protocol: TCP
        volumeMounts:
        - mountPath: /data
          name: storage
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: es-pvc
