elasticsearch/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: es-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - http:
      paths:
      - path: /_cluster
        backend:
          serviceName: elasticsearch
          servicePort: 9200
      - path: /_bulk
        backend:
          serviceName: elasticsearch
          servicePort: 9200
      - path: /_search
        backend:
          serviceName: elasticsearch
          servicePort: 9200
      - path: /asset/_doc
        backend:
          serviceName: elasticsearch
          servicePort: 9200
